--- a/config/integrator.cfg
+++ b/config/integrator.cfg
@@ -8,9 +8,14 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 
 gen = ParameterGenerator()
 
-cleanup = gen.add_group("Vertical gains");
+cleanup = gen.add_group("Cleanup");
 
 cleanup.add("cleanup_enabled", bool_t, 0, "Enabled", False)
-cleanup.add("duration", double_t, 1, "Duration", 0.0, 0.1, 10.0)
+cleanup.add("cleanup_duration", double_t, 1, "Duration", 0.0, 0.1, 10.0)
+
+cluster_timeout = gen.add_group("Cluster timeout");
+
+cluster_timeout.add("cluster_timeout_enabled", bool_t, 0, "Enabled", False)
+cluster_timeout.add("cluster_timeout", double_t, 1, "Timeout", 0.0, 0.1, 10.0)
 
 exit(gen.generate(PACKAGE, "Integrator", "integrator"))
