--- a/config/integrator.yaml
+++ b/config/integrator.yaml
@@ -1,9 +1,9 @@
-publisher_rate: 10
+publisher_rate: 30
 
 cleanup:
-  enabled: true
+  enabled: false
   duration: 10.0 # [s]
 
 cluster_timeout:
   enabled: true
-  timeout: 1.0 # [s]
+  timeout: 10.0 # [s]
